# sonos_mcp

./: .gitignore  AGENT_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  README.md  SEARCH_API_ISSUE.md  SUBAGENT_FLOW_DIAGRAM.md  SUBAGENT_IMPLEMENTATION_SUMMARY.md  claude_music_interface.py  music_agent.py  music_parsing_prompts.py  pyproject.toml  sonos_helpers.py
claude_sdk_agent/: README.md  sdk_agent.py  sonos_mcp_tools.py  system_prompt.py
sonos/: cli.py  get_lyrics.py  sonos_actions.py
sonos_agent/: README.md  sonos_agent.py  sonos_tools.py  system_prompt.py
sonos_mcp_server/: README.md  requirements.txt  server.py
