[project]
name = "sonos-cli"
version = "0.1.0"
description = "cli tool for controlling Sonos speakers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "cloudscraper>=1.2.71",
    "soco>=0.30.11",
    "unidecode>=1.4.0",
]
[project.scripts]
sonos = "sonos.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the root directory
